# garduino

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api_test.ino  garduino_controller.ino  humidity_light.ino
garduino_control/: garduino_control.ino  web_controller.ino
garduino_controller/: garduino_controller.ino
menus/: BoolSetting.cpp  BoolSetting.h  Dummy.cpp  Dummy.h  ItemNode.h  Menu.cpp  Screen.cpp  Screen.h  Setting.h  ValueSetting.cpp  ValueSetting.h  a_item.ino  b_subMenus.ino  c_Menu.ino  d_Setting.ino  e_Screen.ino  f_main.ino  menuFuncs.cpp  menuFuncs.h  menus.ino
src/main/: Action.cpp  Action.h  ActionBinaryTree.cpp  ActionBinaryTree.h  BitSetting.cpp  BitSetting.h  BoolBitSetting.cpp  BoolBitSetting.h  BoolSetting.cpp  BoolSetting.h  ClassDiagram.cd  ClassDiagram1.cd  Control.cpp  Control.h  IntBitSetting.cpp  IntBitSetting.h  IntSetting.cpp  IntSetting.h  Item.cpp  Item.h  ItemList.h  Logging.cpp  Logging.h  Measuring.cpp  Measuring.h  Menu.h  Remote.cpp  Remote.h  Screen.cpp  Screen.h  Setting.cpp  Setting.h  ValueSetting.cpp  ValueSetting.h  WebController.cpp  WebController.h  main.ino  main.sln  main.vcxproj  main.vcxproj.filters  (+1 more)
src/main/Debug/: Action.cpp.d  ActionBinaryTree.cpp.d  BitSetting.cpp.d  BoolBitSetting.cpp.d  BoolSetting.cpp.d  Control.cpp.d  IntBitSetting.cpp.d  IntSetting.cpp.d  Item.cpp.d  ItemList.cpp.d  Logging.cpp.d  Measuring.cpp.d  Menu.cpp.d  Remote.cpp.d  Screen.cpp.d  Setting.cpp.d  ValueSetting.cpp.d  WebController.cpp.d  board.buildinfo  main.cpp.d  main.ino.elf  main.ino.hex  main.with_bootloader.hex  menuFuncs.cpp.d
src/main/Release/: Action.cpp.d  ActionBinaryTree.cpp.d  BitSetting.cpp.d  BoolBitSetting.cpp.d  BoolSetting.cpp.d  Control.cpp.d  IntBitSetting.cpp.d  IntSetting.cpp.d  Item.cpp.d  ItemList.cpp.d  Logging.cpp.d  Measuring.cpp.d  Menu.cpp.d  Remote.cpp.d  Screen.cpp.d  Setting.cpp.d  ValueSetting.cpp.d  WebController.cpp.d  board.buildinfo  main.cpp.d  main.elf  main.hex  main.ino.elf  main.ino.hex  main.ino.with_bootloader.hex  main.with_bootloader.hex  menuFuncs.cpp.d
src/main/__vm/: .main.vsarduino.h  Compile.vmps.xml  Configuration.Debug.vmps.xml  Configuration.Release.vmps.xml  Upload.vmps.xml
src/main/garduino/: Control.cpp  Control.h  Measuring.cpp
src/support/: pins.h
(+21 files in other folders)
